Refactors the data structure responsible for saving preferences

--- a/options.html
+++ b/options.html
@@ -19,8 +19,8 @@
         <div class="row item">
             <button title="Remove" class="remove-me">&#10006;</button>
             <div class="input-group">
-                <label>Domain</label>
-                <input name="domain" type="text">
+                <label>URL</label>
+                <input name="url" type="text">
             </div>
             <div class="input-group">
                 <label>Code</label>
